tests/ui/transmutability/arrays/issue-103783-array-length.stderr
error[E0308]: mismatched types
  --> $DIR/issue-103783-array-length.rs:21:34
   |
LL |     type NaughtyLenArray = [u32; 3.14159];
   |                                  ^^^^^^^ expected `usize`, found floating-point number

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
